--- a/starWeibo/starWeibo/Web.config
+++ b/starWeibo/starWeibo/Web.config
@@ -12,6 +12,6 @@
     </system.web>
 <connectionStrings>
   <!--<add name="starconstr" connectionString="server=.;"/>-->
-  <add name="starconstr" connectionString="server=.;initial Catalog=weibo;Integrated Security=True;"/>
+  <add name="starconstr" connectionString="server=192.168.1.118;initial Catalog=weibo;Integrated Security=True;"/>
 </connectionStrings>
 </configuration>
