--- a/starWeibo/starWeibo/starWeibo.csproj
+++ b/starWeibo/starWeibo/starWeibo.csproj
@@ -232,12 +232,12 @@
     <Compile Include="register.aspx.designer.cs">
       <DependentUpon>register.aspx</DependentUpon>
     </Compile>
-    <Compile Include="starweibo.Master.cs">
-      <DependentUpon>starweibo.Master</DependentUpon>
+    <Compile Include="starweiboM.Master.cs">
+      <DependentUpon>starweiboM.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="starweibo.Master.designer.cs">
-      <DependentUpon>starweibo.Master</DependentUpon>
+    <Compile Include="starweiboM.Master.designer.cs">
+      <DependentUpon>starweiboM.Master</DependentUpon>
     </Compile>
     <Compile Include="zan.aspx.cs">
       <DependentUpon>zan.aspx</DependentUpon>
@@ -248,10 +248,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="starweibo.Master" />
     <Content Include="skin\images\change2\Thumbs.db" />
     <Content Include="css\images\focusimg\Thumbs.db" />
     <Content Include="images\focusimg\headpic\Thumbs.db" />
+    <Content Include="starweiboM.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
