--- a/starWeibo/starWeibo/bin/starWeibo.dll.config
+++ b/starWeibo/starWeibo/bin/starWeibo.dll.config
@@ -11,7 +11,7 @@
       <httpRuntime targetFramework="4.5" />
     </system.web>
 <connectionStrings>
-  <!--<add name="starconstr" connectionString="server=.;"/>-->
-  <add name="starconstr" connectionString="server=192.168.1.118;initial Catalog=weibo;Integrated Security=True;"/>
+  <!--<add name="starconstr" connectionString="server=.;Integrated Security=True;"/>-->
+  <add name="starconstr" connectionString="server=192.168.1.118;initial Catalog=weibo;uid=sa;pwd=123"/>
 </connectionStrings>
 </configuration>
