--- a/starWeibo/starWeibo/starWeibo.csproj
+++ b/starWeibo/starWeibo/starWeibo.csproj
@@ -65,12 +65,14 @@
     <Content Include="detailmessage.aspx" />
     <Content Include="images\loading.gif" />
     <Content Include="js\cancel.png" />
+    <Content Include="js\detailmessage.js" />
     <Content Include="js\jquery.imgareaselect.pack.js" />
     <Content Include="js\jquery.uploadify.min.js" />
     <Content Include="js\swfobject.js" />
     <Content Include="js\uploadify.css" />
     <Content Include="js\uploadify.swf" />
     <Content Include="uploadpage.aspx" />
+    <Content Include="webservice\detailmessage.asmx" />
     <Content Include="webservice\wsadmin.asmx" />
     <Content Include="webservice\wsfocus.asmx" />
     <Content Include="webservice\wshomepage.asmx" />
@@ -335,6 +337,10 @@
     </Compile>
     <Compile Include="uploadpage.aspx.designer.cs">
       <DependentUpon>uploadpage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="webservice\detailmessage.asmx.cs">
+      <DependentUpon>detailmessage.asmx</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="webservice\wsadmin.asmx.cs">
       <DependentUpon>wsadmin.asmx</DependentUpon>
