--- a/starWeibo/starWeibo/starWeibo.csproj
+++ b/starWeibo/starWeibo/starWeibo.csproj
@@ -62,18 +62,21 @@
     <Content Include="comment.aspx" />
     <Content Include="css\detailmessage.css" />
     <Content Include="css\imgareaselect-default.css" />
+    <Content Include="css\playstar.css" />
     <Content Include="detailmessage.aspx" />
     <Content Include="images\loading.gif" />
     <Content Include="js\cancel.png" />
     <Content Include="js\detailmessage.js" />
     <Content Include="js\jquery.imgareaselect.pack.js" />
     <Content Include="js\jquery.uploadify.min.js" />
+    <Content Include="js\playstar.js" />
     <Content Include="js\swfobject.js" />
     <Content Include="js\uploadify.css" />
     <Content Include="js\uploadify.swf" />
+    <Content Include="playstar.aspx" />
     <Content Include="uploadpage.aspx" />
-    <Content Include="webservice\detailmessage.asmx" />
     <Content Include="webservice\wsadmin.asmx" />
+    <Content Include="webservice\wsdetailmessage.asmx" />
     <Content Include="webservice\wsfocus.asmx" />
     <Content Include="webservice\wshomepage.asmx" />
     <Content Include="webservice\wsregister.asmx" />
@@ -331,6 +334,13 @@
     <Compile Include="detailmessage.aspx.designer.cs">
       <DependentUpon>detailmessage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="playstar.aspx.cs">
+      <DependentUpon>playstar.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="playstar.aspx.designer.cs">
+      <DependentUpon>playstar.aspx</DependentUpon>
+    </Compile>
     <Compile Include="uploadpage.aspx.cs">
       <DependentUpon>uploadpage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -338,12 +348,12 @@
     <Compile Include="uploadpage.aspx.designer.cs">
       <DependentUpon>uploadpage.aspx</DependentUpon>
     </Compile>
-    <Compile Include="webservice\detailmessage.asmx.cs">
-      <DependentUpon>detailmessage.asmx</DependentUpon>
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="webservice\wsadmin.asmx.cs">
       <DependentUpon>wsadmin.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="webservice\wsdetailmessage.asmx.cs">
+      <DependentUpon>wsdetailmessage.asmx</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="webservice\wsfocus.asmx.cs">
