--- a/starWeibo/starWeibo/starWeibo.csproj
+++ b/starWeibo/starWeibo/starWeibo.csproj
@@ -64,6 +64,10 @@
     <Content Include="css\imgareaselect-default.css" />
     <Content Include="css\playstar.css" />
     <Content Include="detailmessage.aspx" />
+    <Content Include="images\forget\button_icon.png" />
+    <Content Include="images\forget\sub_nav_1.png" />
+    <Content Include="images\forget\sub_nav_2.png" />
+    <Content Include="images\forget\sub_nav_3.png" />
     <Content Include="images\loading.gif" />
     <Content Include="js\cancel.png" />
     <Content Include="js\detailmessage.js" />
@@ -75,6 +79,7 @@
     <Content Include="js\uploadify.swf" />
     <Content Include="playstar.aspx" />
     <Content Include="uploadpage.aspx" />
+    <Content Include="webservice\forgetpwd.asmx" />
     <Content Include="webservice\wsadmin.asmx" />
     <Content Include="webservice\wsdetailmessage.asmx" />
     <Content Include="webservice\wsfocus.asmx" />
@@ -347,6 +352,10 @@
     </Compile>
     <Compile Include="uploadpage.aspx.designer.cs">
       <DependentUpon>uploadpage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="webservice\forgetpwd.asmx.cs">
+      <DependentUpon>forgetpwd.asmx</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="webservice\wsadmin.asmx.cs">
       <DependentUpon>wsadmin.asmx</DependentUpon>
