--- a/starWeibo/starWeibo/starWeibo.csproj
+++ b/starWeibo/starWeibo/starWeibo.csproj
@@ -65,6 +65,7 @@
     <Content Include="css\playstar.css" />
     <Content Include="detailmessage.aspx" />
     <Content Include="images\forget\button_icon.png" />
+    <Content Include="images\forget\mod_sub_nav.png" />
     <Content Include="images\forget\sub_nav_1.png" />
     <Content Include="images\forget\sub_nav_2.png" />
     <Content Include="images\forget\sub_nav_3.png" />
