--- a/starWeibo/starWeibo/starWeibo.csproj
+++ b/starWeibo/starWeibo/starWeibo.csproj
@@ -70,6 +70,7 @@
     <Content Include="images\forget\sub_nav_2.png" />
     <Content Include="images\forget\sub_nav_3.png" />
     <Content Include="images\loading.gif" />
+    <Content Include="images\repeat_bg_yg.png" />
     <Content Include="js\cancel.png" />
     <Content Include="js\detailmessage.js" />
     <Content Include="js\jquery.imgareaselect.pack.js" />
